--- a/src/views/ProyectoView.form
+++ b/src/views/ProyectoView.form
@@ -63,7 +63,7 @@
                                   </Group>
                               </Group>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="jButton11" min="-2" pref="218" max="-2" attributes="0"/>
+                                  <Component id="btnAdminMiembro" min="-2" pref="218" max="-2" attributes="0"/>
                                   <Component id="bAdministrarTareas" min="-2" pref="218" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -148,7 +148,7 @@
                           <Component id="jComboMiembro" min="-2" pref="33" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jBuscarTarea" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
-                              <Component id="jButton11" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
+                              <Component id="btnAdminMiembro" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
@@ -321,12 +321,12 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BAgregarComentarioActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton11">
+    <Component class="javax.swing.JButton" name="btnAdminMiembro">
       <Properties>
         <Property name="text" type="java.lang.String" value="Administrar Miembros"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton11ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAdminMiembroActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton12">
