--- a/src/views/ModificarTareaView.form
+++ b/src/views/ModificarTareaView.form
@@ -105,7 +105,11 @@
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="bBorrar" min="-2" pref="110" max="-2" attributes="0"/>
+                              <Group type="102" attributes="0">
+                                  <Component id="bBorrar" min="-2" pref="110" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Component id="bCerrar" min="-2" pref="118" max="-2" attributes="0"/>
+                              </Group>
                               <Group type="102" attributes="0">
                                   <Component id="Pendiente" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -114,12 +118,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="110" max="32767" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="bCerrar" min="-2" pref="115" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+                  <EmptySpace pref="20" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -166,12 +165,12 @@
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jidEquipoMiembro" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="53" max="32767" attributes="0"/>
+                  <EmptySpace pref="62" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="bCerrar" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                      <Component id="bBorrar" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                      <Component id="bAgregar" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                      <Component id="bActualizar" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                      <Component id="bCerrar" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
+                      <Component id="bBorrar" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                      <Component id="bAgregar" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
+                      <Component id="bActualizar" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
               </Group>
