--- a/src/views/AdminProyecto.form
+++ b/src/views/AdminProyecto.form
@@ -86,13 +86,14 @@
                       <Group type="102" attributes="0">
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="jComboProyecto" alignment="1" min="-2" pref="428" max="-2" attributes="0"/>
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="jRadioActualizar" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="165" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
                                   <Component id="jRadioNuevo" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
+                                  <Component id="jRadioButtonnoactivos" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jComboProyecto" alignment="1" min="-2" pref="428" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -147,6 +148,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jRadioActualizar" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jRadioNuevo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jRadioButtonnoactivos" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -342,6 +344,14 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="asd"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JRadioButton" name="jRadioButtonnoactivos">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="No activos"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jRadioButtonnoactivosActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
