--- a/src/views/AdminProyecto.form
+++ b/src/views/AdminProyecto.form
@@ -70,10 +70,7 @@
                           <EmptySpace min="-2" pref="235" max="-2" attributes="0"/>
                           <Component id="jButtonActualizar" min="-2" pref="107" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                          <Component id="jTextidentidad" alignment="1" min="-2" pref="93" max="-2" attributes="0"/>
-                          <Component id="jButtonGuardar" alignment="0" min="-2" pref="121" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="jButtonGuardar" alignment="0" min="-2" pref="121" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="jButtonBorrar" min="-2" pref="109" max="-2" attributes="0"/>
@@ -168,8 +165,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Component id="jLabel4" min="-2" pref="31" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="jTextidentidad" min="-2" pref="24" max="-2" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <Component id="jScrollPane1" pref="228" max="32767" attributes="0"/>
                   </Group>
@@ -339,11 +335,6 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextnombre1ActionPerformed"/>
           </Events>
-        </Component>
-        <Component class="javax.swing.JLabel" name="jTextidentidad">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="asd"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JRadioButton" name="jRadioButtonnoactivos">
           <Properties>
